--- a/web/package.json
+++ b/web/package.json
@@ -7,9 +7,14 @@
     "dev": "vite",
     "start:game": "vite build --watch",
     "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -21,7 +26,8 @@
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.43.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "react-redux": "^8.1.1",
     "sass": "^1.63.6",
     "typescript": "^4.9.3",
